cleanup ipynbs from renaming spree

--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -360,10 +360,10 @@
    ],
    "source": [
     "from ltr import years_as_ratings\n",
-    "years_as_ratings.run(client, \n",
-    "                     featureSet='release',\n",
-    "                     classicTrainingSetOut='data/classic-training.txt',\n",
-    "                     latestTrainingSetOut='data/latest-training.txt')"
+    "years_as_ratings.synthesize(client, \n",
+    "                            featureSet='release',\n",
+    "                            classicTrainingSetOut='data/classic-training.txt',\n",
+    "                            latestTrainingSetOut='data/latest-training.txt')"
    ]
   },
   {
