--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
     }
    ],
    "source": [
-    "from ltr.collect_features import judgments_to_training_set\n",
+    "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client,\n",
     "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
     "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,10 +453,10 @@
       "Created Model genre [Status: 200]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "4 - 178579056.50291184\n",
-      "1 - 107974596.42237584\n",
-      "3 - 14215772.384097328\n",
-      "2 - 7654167.426058862\n",
+      "1 - 84672139.80027786\n",
+      "2 - 57048.53838040621\n",
+      "3 - 15085.984030299318\n",
+      "4 - 0.0\n",
       "Perfect NDCG! 1.0\n"
      ]
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -513,17 +513,17 @@
       "['Drama', 'Horror', 'Thriller', 'Crime'] \n",
       "['The Cabinet of Dr. Caligari is eerie and expressionistic, silent and surreal. It has become not only a classic of German Expressionist cinema, but a landmark in film history, with creative scenery and an unusual ending.'] \n",
       "---------------------------------------\n",
+      "['The Penalty'] \n",
+      "8.844578 \n",
+      "1920 \n",
+      "['Crime', 'Drama', 'Horror'] \n",
+      "['Blizzard, deranged from a childhood operation in which both his legs were perhaps needlessly amputated after an accident, becomes a vicious criminal, and eventually mob leader of the San Francisco underworld. Out for revenge against the surgeon who performed his operation, he undergoes brain surgery which has a chance of altering his anti-social behavior.'] \n",
+      "---------------------------------------\n",
       "['Within Our Gates'] \n",
       "8.844578 \n",
       "1920 \n",
       "['Drama', 'Romance'] \n",
       "['Abandoned by her fiancé, an educated negro woman with a shocking past dedicates herself to helping a near bankrupt school for impoverished negro youths.'] \n",
-      "---------------------------------------\n",
-      "['The Last of the Mohicans'] \n",
-      "8.844578 \n",
-      "1920 \n",
-      "['Adventure', 'Drama', 'Action', 'History'] \n",
-      "['As Alice and Cora Munro attempt to find their father, a British officer in the French and Indian War, they are set upon by French soldiers and their cohorts, Huron tribesmen led by the evil Magua. Fighting to rescue the women are Chingachgook and his son Uncas, the last of the Mohican tribe, and their white ally, the frontiersman Natty Bumppo, known as Hawkeye.'] \n",
       "---------------------------------------\n"
      ]
     }
@@ -595,9 +595,11 @@
    ],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "date_genre_judgments.buildJudgments(client,\n",
-    "                                    judgmentsFile='data/genre_by_date_judgments.txt',\n",
-    "                                    autoNegate=True)\n",
+    "from ltr.log import judgments_to_training_set\n",
+    "\n",
+    "date_genre_judgments.synthesize(client,\n",
+    "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
+    "                                autoNegate=True)\n",
     "\n",
     "judgments_to_training_set(client,\n",
     "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
@@ -630,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -638,42 +640,42 @@
      "output_type": "stream",
      "text": [
       "Query {'fl': '*,... [Status: 200]\n",
-      "['A Man There Was'] \n",
-      "3.9405792 \n",
-      "1917 \n",
-      "['Drama'] \n",
-      "[\"Terje Vigen, a sailor, suffers the loss of his family through the cruelty of another man. Years later, when his enemy's family finds itself dependent on Terje's benevolence, Terje must decide whether to avenge himself.\"] \n",
+      "['Guardians of the Galaxy Vol. 2'] \n",
+      "7.785257 \n",
+      "2017 \n",
+      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
+      "[\"The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage.\"] \n",
       "---------------------------------------\n",
-      "['The Immigrant'] \n",
-      "3.9405792 \n",
-      "1917 \n",
-      "['Comedy', 'Drama'] \n",
-      "['Charlie is an immigrant who endures a challenging voyage and gets into trouble as soon as he arrives in America.'] \n",
+      "['Monster Trucks'] \n",
+      "7.785257 \n",
+      "2016 \n",
+      "['Action', 'Comedy', 'Science Fiction'] \n",
+      "['Looking for any way to get away from the life and town he was born into, Tripp, a high school senior, builds a Monster Truck from bits and pieces of scrapped cars. After an accident at a nearby oil-drilling site displaces a strange and subterranean creature with a taste and a talent for speed, Tripp may have just found the key to getting out of town and a most unlikely friend.'] \n",
       "---------------------------------------\n",
-      "['Blacksmith Scene'] \n",
-      "3.939317 \n",
-      "1893 \n",
-      "['Drama'] \n",
-      "['Three men hammer on an anvil and pass a bottle of beer around. Notable for being the first film in which a scene is being acted out.'] \n",
+      "['ARQ'] \n",
+      "7.785257 \n",
+      "2016 \n",
+      "['Science Fiction', 'Thriller'] \n",
+      "['Two old friends living in a dystopic future become trapped in a mysterious time loop — one that may have something to do with an ongoing battle between an omnipotent corporation and a ragtag band of rebels.'] \n",
       "---------------------------------------\n",
-      "[\"Tillie's Punctured Romance\"] \n",
-      "3.939317 \n",
-      "1914 \n",
-      "['Comedy', 'Drama', 'Romance'] \n",
-      "[\"Chaplin plays a womanizing city man who meets Tillie (Dressler) in the country after a fight with his girlfriend (Normand). When he sees that Tillie's father has a very large bankroll for his workers, he persuades her to elope with him. In the city, he meets the woman he was seeing already, and tries to work around the complication to steal Tillie's money.\"] \n",
+      "['Resident Evil: The Final Chapter'] \n",
+      "7.785257 \n",
+      "2016 \n",
+      "['Action', 'Horror', 'Science Fiction'] \n",
+      "[\"Picking up immediately after the events in Resident Evil: Retribution, Alice (Milla Jovovich) is the only survivor of what was meant to be humanity's final stand against the undead. Now, she must return to where the nightmare began - The Hive in Raccoon City, where the Umbrella Corporation is gathering its forces for a final strike against the only remaining survivors of the apocalypse.\"] \n",
       "---------------------------------------\n",
-      "['The Sea Vultures'] \n",
-      "3.939317 \n",
-      "1915 \n",
-      "['Drama'] \n",
-      "[\"Two smugglers meet two customs officers at sea, and happen to kill them. The story continues fifteen years later when a son of one of the officers and a smuggler's daughter fall in love with each other.\"] \n",
+      "['iBoy'] \n",
+      "7.785257 \n",
+      "2017 \n",
+      "['Action', 'Crime', 'Science Fiction', 'Thriller'] \n",
+      "['After an accident, Tom wakes from a coma to discover that fragments of his smart phone have been embedded in his head, and worse, that returning to normal teenage life is impossible because he has developed a strange set of super powers.'] \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"Drama\", modelName=\"genre\")"
+    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
    ]
   },
   {
