--- a/tale-of-two-queries.ipynb
+++ b/tale-of-two-queries.ipynb
@@ -28327,7 +28327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28362,7 +28362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28382,7 +28382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28408,7 +28408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -28497,7 +28497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -28548,7 +28548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -28561,10 +28561,10 @@
       "Created Model genre [Status: 201]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 84672139.80027786\n",
-      "2 - 57048.53838040621\n",
-      "3 - 15085.984030299318\n",
-      "4 - 0.0\n",
+      "4 - 178579056.50291184\n",
+      "1 - 107974596.42237584\n",
+      "3 - 14215772.384097328\n",
+      "2 - 7654167.426058862\n",
       "Perfect NDCG! 1.0\n"
      ]
     }
@@ -28595,18 +28595,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'search'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-891cda2f3dcf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Science Fiction\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"genre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'search'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"Science Fiction\"}, \"model\": \"genre\"}}}\n",
+      "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
+      "Guardians of the Galaxy Vol. 2 \n",
+      "7.7852573 \n",
+      "2017 \n",
+      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
+      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
+      "---------------------------------------\n",
+      "Allegiant \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Adventure', 'Science Fiction'] \n",
+      "Beatrice Prior and Tobias Eaton venture into the world outside of the fence and are taken into protective custody by a mysterious agency known as the Bureau of Genetic Welfare. \n",
+      "---------------------------------------\n",
+      "Alien: Covenant \n",
+      "7.7852573 \n",
+      "2017 \n",
+      "['Horror', 'Science Fiction', 'Thriller'] \n",
+      "Bound for a remote planet on the far side of the galaxy, the crew of the colony ship Covenant discovers what they think is an uncharted paradise, but is actually a dark, dangerous world — whose sole inhabitant is the “synthetic” David, survivor of the doomed Prometheus expedition. \n",
+      "---------------------------------------\n",
+      "Morgan \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Horror', 'Science Fiction', 'Thriller'] \n",
+      "A corporate risk-management consultant must determine whether or not to terminate an artificial being's life that was made in a laboratory environment. \n",
+      "---------------------------------------\n",
+      "Lazer Team \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Action', 'Comedy', 'Science Fiction'] \n",
+      "In the late 1970's, the SETI project received a one time signal from outer space. It looked exactly as theorists thought a communication from an alien civilization would -- unfortunately it has never been decoded. Or so we were told. Unbeknownst to the general public the signal was translated and told us two things:  1) We are not alone.  2) The galaxy is a dangerous place. \n",
+      "---------------------------------------\n"
      ]
     }
    ],
@@ -28635,7 +28662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -28677,9 +28704,9 @@
    "source": [
     "from ltr import date_genre_judgments\n",
     "from ltr.log import judgments_to_training_set\n",
-    "date_genre_judgments.buildJudgments(client,\n",
-    "                                    judgmentsFile='data/genre_by_date_judgments.txt',\n",
-    "                                    autoNegate=True)\n",
+    "date_genre_judgments.synthesize(client,\n",
+    "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
+    "                                autoNegate=True)\n",
     "\n",
     "judgments_to_training_set(client,\n",
     "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
@@ -28712,24 +28739,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'search'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-24da62461c07>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mltr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeywords\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Drama\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodelName\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"genre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'search'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"science fiction\"}, \"model\": \"genre\"}}}\n",
+      "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
+      "Guardians of the Galaxy Vol. 2 \n",
+      "7.7852573 \n",
+      "2017 \n",
+      "['Action', 'Adventure', 'Comedy', 'Science Fiction'] \n",
+      "The Guardians must fight to keep their newfound family together as they unravel the mysteries of Peter Quill's true parentage. \n",
+      "---------------------------------------\n",
+      "Allegiant \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Adventure', 'Science Fiction'] \n",
+      "Beatrice Prior and Tobias Eaton venture into the world outside of the fence and are taken into protective custody by a mysterious agency known as the Bureau of Genetic Welfare. \n",
+      "---------------------------------------\n",
+      "Alien: Covenant \n",
+      "7.7852573 \n",
+      "2017 \n",
+      "['Horror', 'Science Fiction', 'Thriller'] \n",
+      "Bound for a remote planet on the far side of the galaxy, the crew of the colony ship Covenant discovers what they think is an uncharted paradise, but is actually a dark, dangerous world — whose sole inhabitant is the “synthetic” David, survivor of the doomed Prometheus expedition. \n",
+      "---------------------------------------\n",
+      "Morgan \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Horror', 'Science Fiction', 'Thriller'] \n",
+      "A corporate risk-management consultant must determine whether or not to terminate an artificial being's life that was made in a laboratory environment. \n",
+      "---------------------------------------\n",
+      "Lazer Team \n",
+      "7.7852573 \n",
+      "2016 \n",
+      "['Action', 'Comedy', 'Science Fiction'] \n",
+      "In the late 1970's, the SETI project received a one time signal from outer space. It looked exactly as theorists thought a communication from an alien civilization would -- unfortunately it has never been decoded. Or so we were told. Unbeknownst to the general public the signal was translated and told us two things:  1) We are not alone.  2) The galaxy is a dangerous place. \n",
+      "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"Drama\", modelName=\"genre\")"
+    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
    ]
   },
   {
