--- a/hello-ltr (Solr).ipynb
+++ b/hello-ltr (Solr).ipynb
@@ -33,7 +33,7 @@
     }
    ],
    "source": [
-    "from ltr.download import download\n",
+    "from ltr import download\n",
     "download()"
    ]
   },
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
     "]\n",
     "\n",
     "\n",
-    "from ltr.setup import setup\n",
+    "from ltr import setup\n",
     "setup(client, config=config, featureset='release')"
    ]
   },
@@ -406,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "<ltr.train.TrainingLog at 0x13606b6d8>"
+       "<ltr.train.TrainingLog at 0x10ee737f0>"
       ]
      },
      "execution_count": 5,
@@ -415,7 +415,7 @@
     }
    ],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr import train\n",
     "train(client=client, trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
     "train(client=client, trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
    ]
@@ -466,7 +466,7 @@
          "mode": "lines",
          "name": "classic",
          "type": "scatter",
-         "uid": "7100850f-b04f-4653-8f33-fce0a53f71d7",
+         "uid": "ea3498ae-fd6f-4fe4-a24d-852a0e907eeb",
          "x": [
           0,
           1,
@@ -500,43 +500,43 @@
           29
          ],
          "y": [
-          1949,
           1943,
+          1949,
           1966,
           1989,
+          2013,
           2000,
-          1998,
-          1998,
-          1992,
+          2012,
+          2010,
+          2005,
           1993,
-          1995,
+          2016,
           1997,
           2010,
-          2013,
-          2012,
-          2011,
-          2008,
-          2009,
-          2010,
-          2005,
-          2005,
-          2008,
-          2003,
-          2013,
+          2014,
+          2015,
           2014,
           2017,
+          2011,
           2016,
-          2015,
+          1992,
+          2008,
+          2009,
           2016,
-          2014,
-          2016
+          1998,
+          2003,
+          2008,
+          2005,
+          1998,
+          1995,
+          2013
          ]
         },
         {
          "mode": "lines",
          "name": "latest",
          "type": "scatter",
-         "uid": "b082722a-8a5f-40b4-98da-c4c7c37de4d1",
+         "uid": "8cc6afa7-c888-4aa5-9ef0-b97a33f08d28",
          "x": [
           0,
           1,
@@ -570,54 +570,54 @@
           29
          ],
          "y": [
+          2016,
+          2015,
+          2017,
+          2016,
+          2016,
           2014,
           2014,
-          2013,
-          2013,
           2012,
           2011,
-          2016,
-          2016,
-          2016,
-          2017,
-          2015,
-          2010,
-          2008,
-          2009,
-          2010,
-          2008,
-          2000,
-          1992,
+          2013,
+          2013,
           2005,
+          2005,
+          2003,
+          2000,
           1993,
+          1997,
+          1992,
           1998,
           1998,
           1995,
-          1997,
-          2005,
-          2003,
+          2010,
+          2010,
+          2008,
+          2009,
+          2008,
+          1966,
           1989,
           1949,
-          1943,
-          1966
+          1943
          ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"00c30cac-20ec-4796-9977-926894322ecb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\")) {\n",
-       "    Plotly.newPlot(\"00c30cac-20ec-4796-9977-926894322ecb\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1966, 1989, 2000, 1998, 1998, 1992, 1993, 1995, 1997, 2010, 2013, 2012, 2011, 2008, 2009, 2010, 2005, 2005, 2008, 2003, 2013, 2014, 2017, 2016, 2015, 2016, 2014, 2016], \"type\": \"scatter\", \"uid\": \"7100850f-b04f-4653-8f33-fce0a53f71d7\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2013, 2013, 2012, 2011, 2016, 2016, 2016, 2017, 2015, 2010, 2008, 2009, 2010, 2008, 2000, 1992, 2005, 1993, 1998, 1998, 1995, 1997, 2005, 2003, 1989, 1949, 1943, 1966], \"type\": \"scatter\", \"uid\": \"b082722a-8a5f-40b4-98da-c4c7c37de4d1\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"5f4a60f4-4b90-4776-9669-4367beaea916\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\")) {\n",
+       "    Plotly.newPlot(\"5f4a60f4-4b90-4776-9669-4367beaea916\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1943, 1949, 1966, 1989, 2013, 2000, 2012, 2010, 2005, 1993, 2016, 1997, 2010, 2014, 2015, 2014, 2017, 2011, 2016, 1992, 2008, 2009, 2016, 1998, 2003, 2008, 2005, 1998, 1995, 2013], \"type\": \"scatter\", \"uid\": \"ea3498ae-fd6f-4fe4-a24d-852a0e907eeb\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2016, 2015, 2017, 2016, 2016, 2014, 2014, 2012, 2011, 2013, 2013, 2005, 2005, 2003, 2000, 1993, 1997, 1992, 1998, 1998, 1995, 2010, 2010, 2008, 2009, 2008, 1966, 1989, 1949, 1943], \"type\": \"scatter\", \"uid\": \"8cc6afa7-c888-4aa5-9ef0-b97a33f08d28\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\")) {window._Plotly.Plots.resize(document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\")) {window._Plotly.Plots.resize(document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\"));};})</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"00c30cac-20ec-4796-9977-926894322ecb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
-       "if (document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\")) {\n",
-       "    Plotly.newPlot(\"00c30cac-20ec-4796-9977-926894322ecb\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1949, 1943, 1966, 1989, 2000, 1998, 1998, 1992, 1993, 1995, 1997, 2010, 2013, 2012, 2011, 2008, 2009, 2010, 2005, 2005, 2008, 2003, 2013, 2014, 2017, 2016, 2015, 2016, 2014, 2016], \"type\": \"scatter\", \"uid\": \"7100850f-b04f-4653-8f33-fce0a53f71d7\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2014, 2014, 2013, 2013, 2012, 2011, 2016, 2016, 2016, 2017, 2015, 2010, 2008, 2009, 2010, 2008, 2000, 1992, 2005, 1993, 1998, 1998, 1995, 1997, 2005, 2003, 1989, 1949, 1943, 1966], \"type\": \"scatter\", \"uid\": \"b082722a-8a5f-40b4-98da-c4c7c37de4d1\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
+       "<div id=\"5f4a60f4-4b90-4776-9669-4367beaea916\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";\n",
+       "if (document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\")) {\n",
+       "    Plotly.newPlot(\"5f4a60f4-4b90-4776-9669-4367beaea916\", [{\"mode\": \"lines\", \"name\": \"classic\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [1943, 1949, 1966, 1989, 2013, 2000, 2012, 2010, 2005, 1993, 2016, 1997, 2010, 2014, 2015, 2014, 2017, 2011, 2016, 1992, 2008, 2009, 2016, 1998, 2003, 2008, 2005, 1998, 1995, 2013], \"type\": \"scatter\", \"uid\": \"ea3498ae-fd6f-4fe4-a24d-852a0e907eeb\"}, {\"mode\": \"lines\", \"name\": \"latest\", \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2016, 2015, 2017, 2016, 2016, 2014, 2014, 2012, 2011, 2013, 2013, 2005, 2005, 2003, 2000, 1993, 1997, 1992, 1998, 1998, 1995, 2010, 2010, 2008, 2009, 2008, 1966, 1989, 1949, 1943], \"type\": \"scatter\", \"uid\": \"8cc6afa7-c888-4aa5-9ef0-b97a33f08d28\"}], {}, {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\"}); \n",
        "}\n",
-       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\")) {window._Plotly.Plots.resize(document.getElementById(\"00c30cac-20ec-4796-9977-926894322ecb\"));};})</script>"
+       "});</script><script type=\"text/javascript\">window.addEventListener(\"resize\", function(){if (document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\")) {window._Plotly.Plots.resize(document.getElementById(\"5f4a60f4-4b90-4776-9669-4367beaea916\"));};})</script>"
       ]
      },
      "metadata": {},
