pep8 judgment function names

--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,8 +22,6 @@
       "GET http://es-learn-to-rank.labs.o19s.com/RankyMcRankFace.jar\n",
       "GET http://es-learn-to-rank.labs.o19s.com/title_judgments.txt\n",
       "Done.\n",
-      "RUNNING INDEXING...\n",
-      "DO IT!\n",
       "Deleted index tmdb [Status: 200]\n",
       "Created index tmdb [Status: 200]\n",
       "Indexing 27846 documents\n",
@@ -234,7 +232,7 @@
     "client = SolrClient()\n",
     "\n",
     "from ltr import download, index\n",
-    "download.download(); index.rebuild_tmdb(client)"
+    "download(); index.rebuild_tmdb(client)"
    ]
   },
   {
@@ -246,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -449,6 +447,7 @@
       "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 100 -train data/genre_by_date_judgments_train.txt -save data/genre_model.txt\n",
       "DONE\n",
       "Submit Model genre Ftr Set genre [Status: 200]\n",
+      "Feature Set genre... [Status: 200]\n",
       "Deleted Model genre [Status: 200]\n",
       "Created Model genre [Status: 200]\n",
       "\n",
