--- a/netfix movies.ipynb
+++ b/netfix movies.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28340,7 +28340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -28354,7 +28354,14 @@
     }
    ],
    "source": [
-    "config = {\"featureset\": {\n",
+    "config = {\"validation\": {\n",
+    "              \"index\": \"tmdb\",\n",
+    "              \"params\": {\n",
+    "                  \"keywords\": \"rambo\"\n",
+    "              }\n",
+    "    \n",
+    "           },\n",
+    "           \"featureset\": {\n",
     "            \"features\": [\n",
     "            {\n",
     "                \"name\": \"title_phrase\",\n",
@@ -28367,8 +28374,73 @@
     "                        \"boost\": 1.0\n",
     "                    }  \n",
     "                }\n",
-    "            }   ]\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"title\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"constant_score\": {\n",
+    "                        \"filter\": {\n",
+    "                            \"match\": {\"title\": \"{{keywords}}\"}\n",
+    "                        },\n",
+    "                        \"boost\": 1.0\n",
+    "                    }  \n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"title_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"title\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"overview_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"overview_phrase_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match_phrase\": {\"overview\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"title_fuzzy\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"title\": \n",
+    "                                {\"query\": \"{{keywords}}\",\n",
+    "                                 \"fuzziness\": \"AUTO\"}}\n",
+    "                }\n",
+    "            },\n",
+    "            \n",
+    "            \n",
+    "            ]\n",
     "    }}\n",
+    "\n",
+    "config = {\"validation\": {\n",
+    "              \"index\": \"tmdb\",\n",
+    "              \"params\": {\n",
+    "                  \"keywords\": \"rambo\"\n",
+    "              }\n",
+    "    \n",
+    "           },\n",
+    "           \"featureset\": {\n",
+    "            \"features\": [\n",
+    "            {\n",
+    "                \"name\": \"overview_bm25\",\n",
+    "                \"params\": [\"keywords\"],\n",
+    "                \"template\": {\n",
+    "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
+    "                }\n",
+    "            }\n",
+    "            ]\n",
+    "    }}\n",
+    "\n",
     "\n",
     "from ltr import setup\n",
     "setup(client, config=config, featureset='title')"
@@ -28376,7 +28448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -28477,20 +28549,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t DCG@10 -tree 100 -train data/title_judgments_train.txt -save data/title_model.txt\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 10 -leaf 10 -train data/title_judgments_train.txt -save data/title_model.txt\n",
       "DONE\n",
       "Delete model title: 404\n",
       "Created Model title [Status: 201]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 631817.5770753905\n"
+      "1 - 69.65769575436161\n",
+      "0.5707\n",
+      "0.5653\n",
+      "0.5635\n",
+      "0.5631\n",
+      "0.5667\n",
+      "0.5636\n",
+      "0.5673\n",
+      "0.5685\n",
+      "0.5697\n",
+      "0.5697\n",
+      "Train NDCG@10 0.5697\n"
      ]
     }
    ],
@@ -28498,63 +28581,70 @@
     "from ltr import train\n",
     "trainLog = train(client,\n",
     "                 trainingInFile='data/title_judgments_train.txt',\n",
-    "                 metric2t='DCG@10',\n",
+    "                 metric2t='NDCG@10',\n",
+    "                 leafs=10,\n",
+    "                 trees=10,\n",
     "                 featureSet='title',\n",
     "                 modelName='title')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
     "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))"
+    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    \n",
+    "for roundDcg in trainLog.rounds:\n",
+    "    print(roundDcg)\n",
+    "    \n",
+    "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"star trek\"}, \"model\": \"title\"}}}\n",
+      "{\"size\": 5, \"query\": {\"sltr\": {\"params\": {\"keywords\": \"space jam\"}, \"model\": \"title\"}}}\n",
       "Searching tmdb - {'size': 5, 'query': [Status: 200]\n",
-      "Star Trek: Of Gods And Men \n",
-      "3.2223585 \n",
+      "Pearl Jam: Twenty \n",
+      "0.5916266 \n",
+      "2011 \n",
+      "['Documentary', 'Music'] \n",
+      "Pearl Jam Twenty chronicles the years leading up to the band’s formation, the chaos that ensued soon after their rise to megastardom, their step back from center stage, and the creation of a trusted circle that would surround them — giving way to a work culture that would sustain them. Carved from over 1,200 hours of footage spanning the band’s career, Pearl Jam Twenty is the definitive portrait of Pearl Jam: part concert film, part intimate insider-hang, part testimonial to the power of music and uncompromising artists. \n",
+      "---------------------------------------\n",
+      "Pearl Jam: Immagine in Cornice \n",
+      "0.5916266 \n",
       "2007 \n",
-      "['Action', 'Science Fiction'] \n",
-      "The year is 2306… 12 years ago, Captain Kirk was swept away by the Nexus. One year later, Commander Scott was reported missing along with the USS Jenolen. The remaining USS Enterprise crew have split. Captain Spock and Doctor McCoy are on Khitomer, continuing their work towards peace the Klingon Empire. Captain Sulu and the Excelsior are on a mission beyond the Alpha Quadrant. Captain Chekov, feels his career has stalled, leaving him to ponder retirement. Captain Uhura, Director of Starfleet Linguistics, feels there may be something missing in her life.Now, Chekov and Uhura, with John Harriman, former Captain of the Enterprise-B, come together for the dedication of a new ship. However, their reunion is cut short when they receive a distress call from an all-too-familiar planet, where they meet up with an almost-forgotten face, and in an instant, something happens that presses the three friends to embark on a mission that will forever change their lives… \n",
+      "['Music'] \n",
+      "Concert Film Chronicling Five Dynamic Pearl Jam Shows in Italy From September 2006. Shot In Hi-Def By Noted Photographer Danny Clinch, DVD Gives An Intimate Look At Pearl Jam's Amazing Live Performances And Behind-The-Scenes Footage From The Tour. Concerts were shot partially in hi-def in Bologna, Verona, Milan, Torino, and Pistoia, Italy in September 2006. DVD captures Pearl Jam's phenomenal live performances, as well as exclusive behind-the scenes footage of the band on tour. \n",
       "---------------------------------------\n",
-      "Star Trek \n",
-      "3.2223585 \n",
-      "2009 \n",
-      "['Science Fiction', 'Action', 'Adventure'] \n",
-      "The fate of the galaxy rests in the hands of bitter rivals. One, James Kirk, is a delinquent, thrill-seeking Iowa farm boy. The other, Spock, a Vulcan, was raised in a logic-based society that rejects all emotion. As fiery instinct clashes with calm reason, their unlikely but powerful partnership is the only thing capable of leading their crew through unimaginable danger, boldly going where no one has gone before. The human adventure has begun again. \n",
+      "Right at Your Door \n",
+      "0.5916266 \n",
+      "2006 \n",
+      "['Drama', 'Thriller'] \n",
+      "A dirty bomb goes off in Los Angeles, jamming freeways and spreading a toxic cloud. \n",
       "---------------------------------------\n",
-      "Star Trek Into Darkness \n",
-      "3.2223585 \n",
-      "2013 \n",
-      "['Action', 'Adventure', 'Science Fiction'] \n",
-      "When the crew of the Enterprise is called back home, they find an unstoppable force of terror from within their own organization has detonated the fleet and everything it stands for, leaving our world in a state of crisis.  With a personal score to settle, Captain Kirk leads a manhunt to a war-zone world to capture a one man weapon of mass destruction. As our heroes are propelled into an epic chess game of life and death, love will be challenged, friendships will be torn apart, and sacrifices must be made for the only family Kirk has left: his crew. \n",
+      "JohnnyExpress \n",
+      "0.56854796 \n",
+      "2014 \n",
+      "['Animation', 'Comedy', 'Science Fiction'] \n",
+      "It's 2150. There are all sorts of Aliens living throughout space. Johnny is a Space Delivery Man who travels to different planets to deliver packages. Johnny is lazy and his only desire is to sleep in his autopilot spaceship. When the spaceship arrives at the destination, all he has to do is simply deliver the box. However, it never goes as planned. Johnny encounters strange and bizarre planets and always seems to cause trouble on his delivery route.  Will he be able to finish his mission without trouble? \n",
       "---------------------------------------\n",
-      "Star Trek V: The Final Frontier \n",
-      "3.2223585 \n",
-      "1989 \n",
-      "['Science Fiction', 'Action', 'Adventure', 'Thriller'] \n",
-      "Capt. Kirk and his crew must deal with Mr. Spock's half brother who kidnaps three diplomats and hijacks the Enterprise in his obsessive search for God. \n",
-      "---------------------------------------\n",
-      "Star Trek: The Motion Picture \n",
-      "3.2223585 \n",
-      "1979 \n",
-      "['Science Fiction', 'Adventure', 'Mystery'] \n",
-      "When a destructive space entity is spotted approaching Earth, Admiral Kirk resumes command of the Starship Enterprise in order to intercept, examine, and hopefully stop it. \n",
+      "Destiny in Space \n",
+      "0.56854796 \n",
+      "1994 \n",
+      "['Documentary'] \n",
+      "Travel alongside the astronauts as they deploy and repair the Hubble Space Telescope, soar above Venus and Mars, and find proof of new planets and the possibility of other life forming around distant stars. \n",
       "---------------------------------------\n"
      ]
     }
    ],
    "source": [
     "from ltr import search\n",
-    "search(client, \"star trek\", modelName='title')"
+    "search(client, \"space jam\", modelName='title')"
    ]
   },
   {
