--- a/netfix movies.ipynb
+++ b/netfix movies.ipynb
@@ -28340,7 +28340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28422,24 +28422,7 @@
     "            ]\n",
     "    }}\n",
     "\n",
-    "config = {\"validation\": {\n",
-    "              \"index\": \"tmdb\",\n",
-    "              \"params\": {\n",
-    "                  \"keywords\": \"rambo\"\n",
-    "              }\n",
-    "    \n",
-    "           },\n",
-    "           \"featureset\": {\n",
-    "            \"features\": [\n",
-    "            {\n",
-    "                \"name\": \"overview_bm25\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
-    "                }\n",
-    "            }\n",
-    "            ]\n",
-    "    }}\n",
+    "\n",
     "\n",
     "\n",
     "from ltr import setup\n",
@@ -28448,7 +28431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -28549,31 +28532,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -metric2t NDCG@10 -tree 10 -leaf 10 -train data/title_judgments_train.txt -save data/title_model.txt\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 10 -train data/title_judgments_train.txt -save data/title_model.txt\n",
       "DONE\n",
-      "Delete model title: 404\n",
+      "Delete model title: 200\n",
       "Created Model title [Status: 201]\n",
       "\n",
       "Impact of each feature on the model\n",
-      "1 - 69.65769575436161\n",
-      "0.5707\n",
-      "0.5653\n",
-      "0.5635\n",
-      "0.5631\n",
-      "0.5667\n",
-      "0.5636\n",
-      "0.5673\n",
-      "0.5685\n",
-      "0.5697\n",
-      "0.5697\n",
-      "Train NDCG@10 0.5697\n"
+      "1 - 3.203348267692635\n",
+      "2 - 0.02042894214002378\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "0.913\n",
+      "Train NDCG@10 0.913\n"
      ]
     }
    ],
@@ -28584,8 +28568,151 @@
     "                 metric2t='NDCG@10',\n",
     "                 leafs=10,\n",
     "                 trees=10,\n",
+    "                 features=[1,2],\n",
     "                 featureSet='title',\n",
     "                 modelName='title')\n",
+    "\n",
+    "print()\n",
+    "print(\"Impact of each feature on the model\")\n",
+    "for ftrId, impact in trainLog.impacts.items():\n",
+    "    print(\"{} - {}\".format(ftrId, impact))\n",
+    "    \n",
+    "for roundDcg in trainLog.rounds:\n",
+    "    print(roundDcg)\n",
+    "    \n",
+    "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying features [1]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [3]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 3]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 3]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [3, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [3, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 3]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 3, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 3, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 3, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 3, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [3, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 3, 4]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 3, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 3, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [2, 3, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "Trying features [1, 2, 3, 4, 5]\n",
+      "Running java -jar data/RankyMcRankFace.jar -ranker 6 -feature features.txt -metric2t NDCG@10 -tree 10 -leaf 50 -train data/title_judgments_train.txt -save data/temp_model.txt\n",
+      "DONE\n",
+      "\n",
+      "Impact of each feature on the model\n",
+      "3 - 94988.40568769388\n",
+      "4 - 80446.41983709324\n",
+      "1 - 2078.410130899392\n",
+      "0.9213\n",
+      "0.9292\n",
+      "0.9246\n",
+      "0.9252\n",
+      "0.9255\n",
+      "0.9374\n",
+      "0.9375\n",
+      "0.9375\n",
+      "0.94\n",
+      "0.9396\n",
+      "Train NDCG@10 0.9396\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ltr.train import feature_search\n",
+    "trainLog = feature_search(client,\n",
+    "                         trainingInFile='data/title_judgments_train.txt',\n",
+    "                         metric2t='NDCG@10',\n",
+    "                         leafs=10,\n",
+    "                         trees=50,\n",
+    "                         features=[1,2,3,4,5],\n",
+    "                         featureSet='title')\n",
     "\n",
     "print()\n",
     "print(\"Impact of each feature on the model\")\n",
