Add a judgments to CSV converter

--- a/gonna need a bigger bot.ipynb
+++ b/gonna need a bigger bot.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "While some tags are straight forward (`Star Trek`) others are much tougher (`boxing` or `french art movie`) where its unlikely any text has a match. \n",
     "\n",
-    "We're not going to solve those problems here, but we give this to you as a sandbox to apply your skills after the class to see how close you can get to approximating the genome tags data\n"
+    "We're not going to solve those problems here, but we give this to you as a sandbox to apply your skills after the class to see how close you can get to approximating the genome tags data. \n"
    ]
   },
   {
